移除打包时的 AOT 配置